[package]
name = "canvashare-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
bytes = "1.6.0"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
